[package]
name = "caretaker"
version = "0.2.2"
authors = ["Maroš Grego <maros@grego.site>"]
edition = "2018"
description = "A simple, configurable filesystem watcher"
repository = "https://github.com/grego/caretaker"
homepage = "https://github.com/grego/caretaker"
keywords = ["fsevents", "notify", "inotify", "watcher"]
categories = ["command-line-utilities","development-tools"]
license = "MIT"
readme = "README.md"

[dependencies]
toml = "0.5.8"
notify = "^5.0.0-pre.12"
serde = { version = "1.0.130", features = ["derive"] }
structopt = "^0.3.23"
crossbeam-channel = "0.5.1"
parking_lot = "0.11.2"
ansi_term = "0.12.1"
glob = "0.3"
custom_error = "1.9.2"

[profile.release]
lto = true
