[package]
name = "caretaker"
version = "0.2.3"
authors = ["Maroš Grego <maros@grego.site>"]
edition = "2018"
description = "A simple, configurable filesystem watcher"
repository = "https://github.com/grego/caretaker"
homepage = "https://github.com/grego/caretaker"
keywords = ["fsevents", "notify", "inotify", "watcher"]
categories = ["command-line-utilities","development-tools"]
license = "MIT"
readme = "README.md"

[dependencies]
toml = "0.5.9"
notify = "^5.0.0-pre.15"
serde = { version = "^1.0.130", features = ["derive"] }
clap = { version = "3", default_features = false, features = ["std"] }
clap_derive = "3"
crossbeam-channel = "0.5.4"
parking_lot = "0.12"
ansi_term = "0.12.1"
glob = "0.3"
custom_error = "1.9.2"

[profile.release]
lto = true
