[package]
name = "caretaker"
version = "0.2.4"
authors = ["Maroš Grego <maros@grego.site>"]
edition = "2018"
description = "A simple, configurable filesystem watcher"
repository = "https://github.com/grego/caretaker"
homepage = "https://github.com/grego/caretaker"
keywords = ["fsevents", "notify", "inotify", "watcher"]
categories = ["command-line-utilities","development-tools"]
license = "MIT"
readme = "README.md"

[dependencies]
toml = "0.5"
notify = "5"
serde = { version = "^1.0.130", features = ["derive"] }
clap = { version = "3", default_features = false, features = ["std"] }
clap_derive = "3"
crossbeam-channel = "0.5"
nu-ansi-term = "0.46"
glob = "0.3"
custom_error = "1.9.2"

[profile.release]
lto = "fat"
strip = "debuginfo"
